TM-2538 - Fixed show/hide issue about event, bundle, and app select elements. - Added css validation to prevent a select element to become big and break the markup. - Fixed bundle unassigned list with elements from application unassigned list.
git-svn-id: https://opsvcs.tdsops.com/repos/tdstm/trunk@4182 fecba46a-3362-0410-80e5-8c76cdb905a0

--- a/web-app/css/cookbook.css
+++ b/web-app/css/cookbook.css
@@ -212,8 +212,13 @@ form.taskGeneration{
 	padding: 10px 0 0 0;
 }
 
-form.taskGeneration label{
+form.taskGeneration label.inline{
 	margin: 0 5% 0 0;
+	display: inline;
+}
+
+form.taskGeneration label.inline select{
+	max-width: 20%;
 }
 
 form.taskGeneration label[for="autoPublishTasks"], .completionWrapper, .generateWrapper, .progressWrapper, .completionButtons{
